syntax = "proto3";

package br.proto.hash;

service GrpcHashService {
    rpc create (CreateRequest) returns (CreateResponse);
    rpc read (ReadRequest) returns(ReadResponse);
    rpc update(UpdateRequest)returns(UpdateResponse);
    rpc delete(DeleteRequest)returns(DeleteResponse);
    rpc sair(SairRequest)returns(SairResponse);
}

message EmptyResponse {}

message CreateRequest {
  	string key = 1;
  	string value = 2;
}

message CreateResponse{
	bool response = 1;
}

message ReadRequest {
    string key = 1;
}

message ReadResponse{
	string key = 1;
	string value = 2;
}
message UpdateRequest {
	string key = 1;
	string value = 2;
}
message UpdateResponse{
	bool response = 1;
}

message DeleteRequest{
	string key = 1;

}
message DeleteResponse{
	string mensagem = 1;
	bool response = 2;
}

message SairRequest{
    string mensagem = 1;
}

message SairResponse{
	bool response = 1;
}
